--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "heroku-prebuild": "cd client && npm install",
     "build": "babel src -d build",
-    "build_frontend": "cd ./client && npm run build",
+    "build_frontend": "cd client && npm run build",
     "db_init": "node build/db/db_init.js",
     "start": "npm run build_frontend && npm run build && node build/server.js"
   },
@@ -23,13 +23,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.0",
+    "mongodb": "^3.6.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.4",
-    "@babel/node": "^7.10.5",
-    "@babel/preset-env": "^7.11.0"
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1"
   }
 }
